Changed navbar text to have more contrast. Fixed navbar missing collapse button. Fixed navbar missing items on small displays.

--- a/public_html/cronnit.css
+++ b/public_html/cronnit.css
@@ -3,3 +3,7 @@
   margin-top: 1em;
   margin-bottom: 2em;
 }
+
+.navbar-dark .navbar-nav .nav-link {
+  color: white;
+}
